bk_ida/gccida/g2/expand_decl
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_decl/src/stmt.c:4331:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode supercontext_low; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_decl/src/stmt.c:4332:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v6; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_decl/src/stmt.c:4333:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v7; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_decl/src/stmt.c:4345:1: error: must use 'enum' tag to refer to type 'built_in_function'
built_in_function v19; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_decl/src/stmt.c:4346:4: error: expected ';' after expression
rtx v20; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_decl/src/stmt.c:4346:5: error: use of undeclared identifier 'v20'
rtx v20; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_decl/src/stmt.c:4352:1: error: must use 'enum' tag to refer to type 'built_in_function'
built_in_function f; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_decl/src/stmt.c:4354:4: error: expected ';' after expression
rtx v28; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_decl/src/stmt.c:4354:5: error: use of undeclared identifier 'v28'
rtx v28; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_decl/src/stmt.c:4356:4: error: expected ';' after expression
rtx v30; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_decl/src/stmt.c:4356:5: error: use of undeclared identifier 'v30'; did you mean 'v10'?
rtx v30; // rax 
    ^~~
    v10
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_decl/src/stmt.c:4336:18: note: 'v10' declared here
 struct rtx_def *v10; // rdi 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_decl/src/stmt.c:4359:1: error: must use 'enum' tag to refer to type 'built_in_function'
built_in_function v33; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_decl/src/stmt.c:4361:4: error: expected ';' after expression
rtx v35; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_decl/src/stmt.c:4361:5: error: use of undeclared identifier 'v35'
rtx v35; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_decl/src/stmt.c:4439:1: error: use of undeclared identifier 'v35'
v35 = decl->decl.rtl; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_decl/src/stmt.c:4440:7: error: use of undeclared identifier 'v35'
if ( !v35 ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_decl/src/stmt.c:4443:1: error: use of undeclared identifier 'v35'
v35 = decl->decl.rtl; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_decl/src/stmt.c:4445:45: error: use of undeclared identifier 'v35'; did you mean 'v15'?
regno_decl[*( unsigned int *)( *( _QWORD *)&v35[1] + 8LL)] = decl; 
                                            ^~~
                                            v15
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_decl/src/stmt.c:4341:5: note: 'v15' declared here
rtx v15; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_decl/src/stmt.c:4463:1: error: use of undeclared identifier 'v30'
v30 = type->int_cst.rtl; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_decl/src/obj/stmt.o] Error 1
